versions/v4.0.0/boards/nordic/nrf54l15dk/doc/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/boards/nordic/nrf54l15dk/doc/index.html
original_path: boards/nordic/nrf54l15dk/doc/index.html
---

# nRF54L15 DK

## Overview

Note

You can find more information about the nRF54L15 SoC on the [nRF54L15 website](https://www.nordicsemi.com/Products/nRF54L15).
For the nRF54L15 technical documentation and other resources (such as
SoC Datasheet), see the [nRF54L15 documentation](https://docs.nordicsemi.com/bundle/ncs-latest/page/nrf/app_dev/device_guides/nrf54l/index.html) page.

The nRF54L15 Development Kit hardware provides support for the Nordic Semiconductor
nRF54L15 Arm Cortex-M33 CPU and the following devices:

- SAADC
- CLOCK
- RRAM
- GPIO
- TWIM
- MEMCONF
- MPU
- NVIC
- PWM
- GRTC
- Segger RTT (RTT Console)
- SPI
- UARTE
- WDT

![nRF54L15 DK](https://docs.zephyrproject.org/4.0.0/_images/nrf54l15dk_nrf54l15.webp)

nRF54L15 DK (Credit: Nordic Semiconductor)

## Hardware

nRF54L15 DK has two crystal oscillators:

- High-frequency 32 MHz crystal oscillator (HFXO)
- Low-frequency 32.768 kHz crystal oscillator (LFXO)

The crystal oscillators can be configured to use either
internal or external capacitors.

### Supported Features

The `nrf54l15dk/nrf54l15/cpuapp` board target configuration supports the following
hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| CLOCK | on-chip | clock\_control |
| GPIO | on-chip | gpio |
| GRTC | on-chip | counter |
| MEMCONF | on-chip | retained\_mem |
| MPU | on-chip | arch/arm |
| NVIC | on-chip | arch/arm |
| PWM | on-chip | pwm |
| RRAM | on-chip | flash |
| RTT | Segger | console |
| SAADC | on-chip | adc |
| SPI(M/S) | on-chip | spi |
| SPU | on-chip | system protection |
| TWIM | on-chip | i2c |
| UARTE | on-chip | serial |
| WDT | on-chip | watchdog |

Other hardware features have not been enabled yet for this board.

## Programming and Debugging

Applications for the `nrf54l15dk/nrf54l15/cpuapp` board target can be
built, flashed, and debugged in the usual way. See
[Building an Application](../../../../develop/application/index.md#build-an-application) and [Run an Application](../../../../develop/application/index.md#application-run) for more details on
building and running.

Applications for the `nrf54l15dk/nrf54l15/cpuflpr` board target need
to be built as multicore configuration with code snippet called `vpr_launcher`
for the application core.

Enter the following command to compile `hello_world` for the FLPR core::
:   west build -p -b nrf54l15dk/nrf54l15/cpuflpr –sysbuild – -DSB\_VPR\_LAUNCHER=y

### Flashing

As an example, this section shows how to build and flash the [Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.")
application.

Warning

When programming the device, you might get an error similar to the following message:

```text
ERROR: The operation attempted is unavailable due to readback protection in
ERROR: your device. Please use --recover to unlock the device.
```

This error occurs when readback protection is enabled.
To disable the readback protection, you must *recover* your device.

Enter the following command to recover the core:

```text
west flash --recover
```

The `--recover` command erases the flash memory and then writes a small binary into
the recovered flash memory.
This binary prevents the readback protection from enabling itself again after a pin
reset or power cycle.

Follow the instructions in the [Nordic nRF5x Segger J-Link](../../../../develop/flash_debug/nordic_segger.md#nordic-segger) page to install
and configure all the necessary software. Further information can be
found in [Flashing](../../../../develop/flash_debug/nordic_segger.md#nordic-segger-flashing).

To build and program the sample to the nRF54L15 DK, complete the following steps:

First, connect the nRF54L15 DK to you computer using the IMCU USB port on the DK.
Next, build the sample by running the following command:

```shell
# From the root of the zephyr repository
west build -b nrf54l15dk/nrf54l15/cpuapp samples/hello_world
west flash
```

## Testing the LEDs and buttons in the nRF54L15 DK

Test the nRF54L15 DK with a [Blinky](../../../../samples/basic/blinky/README.md#blinky "Blink an LED forever using the GPIO API.") sample.
